2010-06-12  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in (make_image): Remove sh module, which has
	been merged back into normal.

2010-06-11  Colin Watson  <cjwatson@ubuntu.com>

	* include/grub/efi/uga_draw.h (GRUB_EFI_UGA_GLT_MAX): Rename to ...
	(GRUB_EFI_UGA_BLT_MAX): ... this (typo fix).

2010-06-11  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (install-local): Include $(srcdir)/docs/man/$$dest.h2m
	when generating manual pages.
	* docs/man/grub-bin2h.h2m: New file.
	* docs/man/grub-editenv.h2m: New file.
	* docs/man/grub-fstest.h2m: New file.
	* docs/man/grub-install.h2m: New file.
	* docs/man/grub-macho2img.h2m: New file.
	* docs/man/grub-mkconfig.h2m: New file.
	* docs/man/grub-mkdevicemap.h2m: New file.
	* docs/man/grub-mkfont.h2m: New file.
	* docs/man/grub-mkimage.h2m: New file.
	* docs/man/grub-mkpasswd-pbkdf2.h2m: New file.
	* docs/man/grub-mkrelpath.h2m: New file.
	* docs/man/grub-mkrescue.h2m: New file.
	* docs/man/grub-ofpathname.h2m: New file.
	* docs/man/grub-pe2elf.h2m: New file.
	* docs/man/grub-probe.h2m: New file.
	* docs/man/grub-reboot.h2m: New file.
	* docs/man/grub-script-check.h2m: New file.
	* docs/man/grub-set-default.h2m: New file.
	* docs/man/grub-setup.h2m: New file.

2010-06-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Use FOR_* macros instead of *_iterate whenever possible.

	* commands/handler.c: Removed.
	* commands/help.c (grub_cmd_help): Use FOR_COMMANDS.
	* commands/minicmd.c (grub_mini_cmd_lsmod): Use FOR_DL_MODULES.
	* conf/any-emu.rmk (kernel_img_SOURCES): Remove kern/handler.c.
	* conf/common.rmk (script/lexer.c_DEPENDENCIES): Add grub_script.yy.h.
	(grub_probe_SOURCES): Remove kern/parser.c.
	(util/grub-script-check.c_DEPENDENCIES): Removed.
	(grub_script_check_SOURCES): Remove kern/handler.c, kern/parser.c
	and grub_script_check_init.c.
	(grub_script_check_init.lst): Removed.
	(grub_script_check_init.h): Likewise.
	(grub_script_check_init.c): Likewise.