@@ -1,3 +1,10 @@
+2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	custom.cfg support.
+
+	* conf/common.rmk (grub-mkconfig_SCRIPTS): Add 41_custom.
+	* util/grub.d/41_custom.in: New file.
+
 2010-06-12  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub-mkrescue.in (make_image): Remove sh module, which has
